# graphic_editor_cpp

./: .gitignore  CMakeLists.txt  CircleFigure.h  Color.cpp  Color.h  Figure.cpp  Figure.h  Point.cpp  Point.h  README.md  RectangleFigure.cpp  RectangleFigure.h  TriangleFigure.cpp  TriangleFigure.h  Vector2.cpp  Vector2.h  deploy.txt  main.cpp
figure/: AbstractFigure.h  CircleFigure.h  LineFigure.h  PolyLineFigure.h  RectangleFigure.h
tool/: AbstractTool.h  PencilTool.h  StraightLineTool.h
